--- a/美团/口口相传面经.md
+++ b/美团/口口相传面经.md
@@ -2,17 +2,17 @@
 
 #### hashmap和hashtable的区别？
 
-**1.** ***\*线程是否安全：\****hashmap非线程安全，hashtable线程安全，因为hashtable的内部方法基本都经过synchronized修饰。
+**1.线程是否安全：**hashmap非线程安全，hashtable线程安全，因为hashtable的内部方法基本都经过synchronized修饰。
 
-**2.** ***\*效率\****：因为线程安全的问题，hashmap比hashtable效率高。
+**2. 效率**：因为线程安全的问题，hashmap比hashtable效率高。
 
-**3.** ***\*关于null：\****hashmap可以存储 null 的 key 和 value，但 null 作为键只能有一个，null 作为值可以有多个；hashtable不允许有 null 键和 null 值，否则会抛出 NullPointerException。
+**3.关于null：**hashmap可以存储 null 的 key 和 value，但 null 作为键只能有一个，null 作为值可以有多个；hashtable不允许有 null 键和 null 值，否则会抛出 NullPointerException。
 
-**4.** ***\*初始容量大小不同\****：如果创建时不指定容量初始值，hashmap默认初始大小为16，hashtable默认初始大小为11；如果创建时指定了容量初始值，hashmap会将其扩充为2的幂次方大小，hashtable直接使用给定的大小。
+**4. 初始容量大小不同**：如果创建时不指定容量初始值，hashmap默认初始大小为16，hashtable默认初始大小为11；如果创建时指定了容量初始值，hashmap会将其扩充为2的幂次方大小，hashtable直接使用给定的大小。
 
-**5.** ***\*扩容时不同：\****hashmap每次扩容为之前的2倍，hashtable每次扩容为之前的2n+1
+**5.扩容时不同：**hashmap每次扩容为之前的2倍，hashtable每次扩容为之前的2n+1
 
-**6.** ***\*底层数据结构：\****hashmap为数组+链表/红黑树，hashtable为数组+链表。JDK1.8 以后的 HashMap 在解决哈希冲突时有了较大的变化，当链表长度大于阈值（默认为 8）时，将链表转化为红黑树（将链表转换成红黑树前会判断，如果当前数组的长度小于 64，那么会选择先进行数组扩容，而不是转换为红黑树），以减少搜索时间。Hashtable 没有这样的机制。
+**6.底层数据结构：**hashmap为数组+链表/红黑树，hashtable为数组+链表。JDK1.8 以后的 HashMap 在解决哈希冲突时有了较大的变化，当链表长度大于阈值（默认为 8）时，将链表转化为红黑树（将链表转换成红黑树前会判断，如果当前数组的长度小于 64，那么会选择先进行数组扩容，而不是转换为红黑树），以减少搜索时间。Hashtable 没有这样的机制。
 
  
 
@@ -124,18 +124,153 @@ List、Set、Queue、Map
 
 - TreeMap：红黑树（自平衡的排序二叉树）
 
-**JDBC怎么建立数据库连接**
+  
 
-**mybatis的$和#有什么区别**
+#### JDBC怎么建立数据库连接
 
- 
+要想使用JDBC，需要先安装相应的驱动程序。
 
-**进程内存结构**
+安装驱动程序后，按照以下步骤使用JDBC建立数据库连接：
 
-**32位计算机寻址空间**
+**1.导入JDBC包**：使用Java语言的`import`语句在Java代码开头位置导入所需的类。
 
-**java包装类和基本类型的区别**
+```java
+import java.sql.* ;  // for standard JDBC programs
+import java.math.* ; // for BigDecimal and BigInteger support
+```
 
-**抽象类和接口区别**
+**2.注册JDBC驱动程序**：使JVM将所需的驱动程序实现加载到内存中，从而可以满足JDBC请求。
+
+注册驱动程序是将Oracle驱动程序的类文件加载到内存中的过程，因此可以将其用作JDBC接口的实现。
+
+只需在程序中一次注册就可以。可以通过两种方式之一来注册驱动程序：
+
+- Class.forName
+
+  ```java
+  Class.forName("com.mysql.jdbc.Driver");//注册CDBC驱动程序
+  Connection conn = null;
+  conn = DriverManager.getConnection("jdbc:mysql://hostname:port/db_name","db_username", "db_password");//数据库url配置、创建连接对象
+  conn.close();//关闭连接
+  ```
+
+-  DriverManager.registerDriver() 
+
+  ```java
+  try {
+     Driver myDriver = new oracle.jdbc.driver.OracleDriver();
+     DriverManager.registerDriver( myDriver );//注册CDBC驱动程序
+  }
+  catch(ClassNotFoundException ex) {
+     System.out.println("Error: unable to load driver class!");
+     System.exit(1);
+  }
+  ```
+
+ //更多请阅读：https://yiibai.com/jdbc/jdbc-db-connections.html 
+
+**3.数据库URL配置**： 使用`DriverManager.getConnection()`方法建立连接 ，指向要连接到的数据库(如：MySQL,Oracle和MSSQL等等)。
+
+三个 重载的`DriverManager.getConnection()`方法 ：
+
+```java
+getConnection(String url)
+getConnection(String url, Properties prop)
+getConnection(String url, String user, String password)
+```
+
+其中的url是数据库的url，指向要使用的数据库地址，各种数据库的url格式如下：
+
+![https://yangyujia.oss-cn-beijing.aliyuncs.com/meituan5.png](https://yangyujia.oss-cn-beijing.aliyuncs.com/meituan5.png)
+
+**4.创建连接对象**：最后，调用`DriverManager`对象的`getConnection()`方法来建立实际的数据库连接。
+
+一个简单的JDBC连接测试代码示例如下所示：
+
+```java
+package com.yiibai;
+
+import java.sql.DriverManager;
+import java.sql.Connection;
+import java.sql.SQLException;//导入JDBC包
+
+public class OracleJDBCExample {
+
+    public static void main(String[] argv) {
+
+        System.out.println("-------- Oracle JDBC Connection Testing ------");
+
+        try {
+
+            Class.forName("oracle.jdbc.driver.OracleDriver");//创建JDBC驱动程序
+
+        } catch (ClassNotFoundException e) {
+
+            System.out.println("Where is your Oracle JDBC Driver?");
+            e.printStackTrace();
+            return;
+
+        }
+
+        System.out.println("Oracle JDBC Driver Registered!");
+
+        Connection connection = null;
+
+        try {
+
+            connection = DriverManager.getConnection(
+                    "jdbc:oracle:thin:@localhost:1521:xe", "system", "password");
+            //数据库url配置、创建连接对象
+
+        } catch (SQLException e) {
+
+            System.out.println("Connection Failed! Check output console");
+            e.printStackTrace();
+            return;
+
+        }
+
+        if (connection != null) {
+            System.out.println("You made it, take control your database now!");
+        } else {
+            System.out.println("Failed to make connection!");
+        }
+    }
+
+}
+```
+
+ //更多请阅读：https://yiibai.com/jdbc/jdbc-db-connections.html 
+
+
+
+#### mybatis的$和#有什么区别
+
+  #{}方式能够很大程度防止sql注入(安全)，${}方式无法防止Sql注入。 
+
+（ Sql注入指的是程序解析时会将你传入的参数作为原来SQL语句的一部分，打乱原来SQL的结构 ）
+
+解释#{}和${}：
+
+![](https://yangyujia.oss-cn-beijing.aliyuncs.com/meituan6%20%282%29.png)
+
+![](https://yangyujia.oss-cn-beijing.aliyuncs.com/meituan7.png)
+
+#### 进程内存结构
+
+#### 32位计算机寻址空间
+
+#### java包装类和基本类型的区别
+
+- 成员变量包装类型不赋值就是 `null` ，而基本类型有默认值且不是 `null`。
+- 包装类型可用于泛型，而基本类型不可以。
+- 基本数据类型的局部变量存放在 **虚拟机栈中的局部变量表**中，基本数据类型的成员变量（未被 `static` 修饰 ）存放在**堆**中。包装类型属于对象类型，我们知道几乎所有对象实例都存在于**堆**中。
+- 相比于对象类型， 基本数据类型占用的空间非常小。
+
+**为什么说是几乎所有对象实例呢？** 这是因为 HotSpot 虚拟机引入了 JIT 优化之后，会对对象进行逃逸分析，如果发现某一个对象并没有逃逸到方法外部，那么就可能通过标量替换来实现栈上分配，而避免堆上分配内存
+
+⚠️ 注意 ： **基本数据类型存放在栈中是一个常见的误区！** 基本数据类型的成员变量如果没有被 `static` 修饰的话（不建议这么使用，应该要使用基本数据类型对应的包装类型），就存放在堆中。
+
+#### 抽象类和接口区别
 
  
