--- a/美团/口口相传面经.md
+++ b/美团/口口相传面经.md
@@ -256,21 +256,53 @@ public class OracleJDBCExample {
 
 ![](https://yangyujia.oss-cn-beijing.aliyuncs.com/meituan7.png)
 
+
+
 #### 进程内存结构
 
+- **文本段**：包含了<font color="red">进程运行的程序机器语言指令</font>。文本段具有<font color="orange">只读属性</font>，以防止进程通过错误指针意外修改自身指令。因为多个进程可同时运行同一程序，所以又将文本段设为<font color="orange">可共享</font>，这样，一份程序代码的拷贝可以映射到所有这些进程的虚拟地址空间中。
+- **初始化数据段**：包含显示<font color="red">初始化的全局变量和静态变量</font>。当程序加载到内存时，从可执行文件中读取这些变量的值。
+- **未初始化数据段**：包含了<font color="red">未进行显示初始化的全局变量和静态变量</font>。程序启动之前，系统将本段内所有内存初始化为0。出于历史原因，此段常被称为BSS段，这源于老版本的汇编语言助记符“block started by symbol”。将经过初始化的全局变量和静态变量与未初始化的全局变量和静态变量分开存放，其主要原因在于程序在磁盘上存储时，没有必要为未经初始化的变量分配存储空间。相反，可执行文件只需记录未初始化数据段的位置及所需大小，直到运行时再由程序加载器来分配空间。
+- **栈**（stack）：是一个动态增长和收缩的段，有栈帧（stack frames）组成。系统会<font color="red">为每个当前调用的函数分配一个栈帧</font>。栈帧中存储了函数的局部变量（所谓自动变量）、实参和返回值。<font color="voilet">增长方向低地址→高地址</font>
+- **堆**（heap）：是<font color="red">可在运行时（为变量）动态进行内存分配的一块区域</font>。<font color="voilet">增长方向高地址→低地址</font>
+
+
+
 #### 32位计算机寻址空间
+
+一个内存地址代表一个字节（8位）存储空间，32位操作系统支持2^32=4GB的寻址空间，也就是最多能表示4G=4*2^30个内存地址。    
+
+但实际上可用内存会少于4G，因为 CPU如果要访问你的显卡上的显存，就必须把物理地址空间的一部分用于标识显存 。
+
+补充：64位操作系统的寻址空间是2^64=64TB
+
+
 
 #### java包装类和基本类型的区别
 
 - 成员变量包装类型不赋值就是 `null` ，而基本类型有默认值且不是 `null`。
 - 包装类型可用于泛型，而基本类型不可以。
-- 基本数据类型的局部变量存放在 **虚拟机栈中的局部变量表**中，基本数据类型的成员变量（未被 `static` 修饰 ）存放在**堆**中。包装类型属于对象类型，我们知道几乎所有对象实例都存在于**堆**中。
+- 基本数据类型的**局部变量**存放在 <font color=red>**虚拟机栈中的局部变量表**</font>中，基本数据类型的**成员变量**（未被 `static` 修饰 ）存放在<font color=red>**堆**</font>中。包装类型属于对象类型，我们知道几乎所有对象实例都存在于<font color=red>**堆**</font>中。
 - 相比于对象类型， 基本数据类型占用的空间非常小。
 
 **为什么说是几乎所有对象实例呢？** 这是因为 HotSpot 虚拟机引入了 JIT 优化之后，会对对象进行逃逸分析，如果发现某一个对象并没有逃逸到方法外部，那么就可能通过标量替换来实现栈上分配，而避免堆上分配内存
 
 ⚠️ 注意 ： **基本数据类型存放在栈中是一个常见的误区！** 基本数据类型的成员变量如果没有被 `static` 修饰的话（不建议这么使用，应该要使用基本数据类型对应的包装类型），就存放在堆中。
 
-#### 抽象类和接口区别
+
+
+#### 抽象类和接口的共同点和区别
+
+**共同点** ：
+
+- 都<font color=red>不能被实例化</font>。
+- 都可以包含<font color=red>抽象方法</font>。
+- 都可以有<font color=red>默认实现的方法</font>（Java 8 可以用 `default` 关键字在接口中定义默认方法）。
+
+**区别** ：
+
+- 接口主要用于对<font color=red>类的行为</font>进行约束，你实现了某个接口就具有了对应的行为。抽象类主要用于代码复用，强调的是<font color=red>所属关系</font>。
+- <font color=red>一个类只能继承一个类，但是可以实现多个接口</font>。
+- 接口中的成员变量只能是 <font color=red>`public static final`</font> 类型的，不能被修改且必须有初始值，而抽象类的成员变量默认<font color=red> default</font>，可在子类中被重新定义，也可被重新赋值。
 
  
