--- a/阿里/一些面试题参考.md
+++ b/阿里/一些面试题参考.md
@@ -573,29 +573,41 @@ Https总体过程——两次http请求：
 
 
 
+# 技术框架
 
-**技术框架**
+## 1.看过哪些开源框架的源码
 
-1. 
-   看过哪些开源框架的源码
+## 2.为什么要用Redis，Redis有哪些优缺点？Redis如何实现扩容？
 
-2. 为什么要用Redis，Redis有哪些优缺点？Redis如何实现扩容？
+## 3.Netty是如何使用线程池的，为什么这么使用
 
-3. Netty是如何使用线程池的，为什么这么使用
 
-4. 为什么要使用Spring，Spring的优缺点有哪些
 
-5. Spring的IOC容器初始化流程
+## 4.为什么要使用Spring，Spring的优缺点有哪些
 
-6. Spring的IOC容器实现原理，为什么可以通过byName和ByType找到Bean
 
-7. Spring AOP实现原理
 
-8. 消息中间件是如何实现的，技术难点有哪些
+## 5.Spring的IOC容器初始化流程
 
-9. Zookeeper实现原理，以及选主算法
 
-10. 为什么需要配置中心，配置中心如何实现的
+
+## 6.Spring的IOC容器实现原理，为什么可以通过byName和ByType找到Bean
+
+
+
+## 7.Spring AOP实现原理
+
+
+
+## 8.消息中间件是如何实现的，技术难点有哪些
+
+## 9.Zookeeper实现原理，以及选主算法
+
+
+
+## 10.为什么需要配置中心，配置中心如何实现的
+
+
 
 
 
