--- a/美团/3.24面试.md
+++ b/美团/3.24面试.md
@@ -18,13 +18,11 @@
 
 #### Q1.@resource和@autowired这两个注解有什么不同？
 
-**（1）基因不同：** 首先其最大的不同在于她们的爸爸妈妈不同（@Autowired是由org.springframework.beans.factory.annotation.Autowired提供，换句话说就是由Spring提供；@Resource是由javax.annotation.Resource提供，即J2EE提供，需要JDK1.6及以上。）
+- `@Autowired` 是 Spring 提供的注解，`@Resource` 是 JDK 提供的注解。
+- `Autowired` 默认的注入方式为`byType`（根据类型进行匹配），`@Resource`默认注入方式为 `byName`（根据名称进行匹配）。
+- 当一个接口存在多个实现类的情况下，`@Autowired` 和`@Resource`<font color="red">都需要通过byName才能正确匹配到对应的 Bean</font>。`Autowired` 可以通过 <font color="red">`@Qualifier` 注解</font>来显式指定名称，`@Resource`可以通过 <font color="red">`name` 属性</font>来显式指定名称。
 
-（2）**注入方式：**@Autowired默认按照byType 注入，也提供byName；@Resource默认按byName自动注入，也提供按照byType 注入；
-
-**（3）注入顺序：**@
-
- 
+### 
 
 解释一下byName和byType注入：
 
@@ -46,7 +44,7 @@ Spring的bean默认都是单例的
 
 缺点：
 
-某些情况下，单例是并发不安全的，以Controller举例，问题根源在于，我们可能会在Controller中定义成员变量，如此一来，多个请求来临，进入的都是同一个单例的Controller对象，并对此成员变量的值进行修改操作，因此会互相影响，无法达到并发安全（不同于线程隔离的概念，后面会解释到）的效果。
+某些情况下，单例是并发不安全的，以Controller举例，问题>根源在于，我们可能会在Controller中定义成员变量，如此一来，多个请求来临，进入的都是同一个单例的Controller对象，并对此成员变量的值进行修改操作，因此会互相影响，无法达到并发安全（不同于线程隔离的概念，后面会解释到）的效果。
 
  
 
