--- a/美团/3.24面试.md
+++ b/美团/3.24面试.md
@@ -21,6 +21,7 @@
 - `@Autowired` 是 Spring 提供的注解，`@Resource` 是 JDK 提供的注解。
 - `Autowired` 默认的注入方式为`byType`（根据类型进行匹配），`@Resource`默认注入方式为 `byName`（根据名称进行匹配）。
 - 当一个接口存在多个实现类的情况下，`@Autowired` 和`@Resource`<font color="red">都需要通过byName才能正确匹配到对应的 Bean</font>。`Autowired` 可以通过 <font color="red">`@Qualifier` 注解</font>来显式指定名称，`@Resource`可以通过 <font color="red">`name` 属性</font>来显式指定名称。
+- @Autowired可以用于构造方法、setter方法、属性上，@Resource不能用于构造方法。
 
 ### 
 
