--- a/阿里/马雪灵3.22CTO一面.markdown
+++ b/阿里/马雪灵3.22CTO一面.markdown
@@ -126,6 +126,14 @@ mdate: 2023-03-27 11:17:11
 
 #### 6、OSI七层模型，每一层做的是什么 （简单说说就好）
 
+- 1.物理层：解决<font color="red">两个硬件之间的通信问题</font>，透明地传送比特流传输，定义物理设备标准，如网线/光纤的接口标准、各种传输介质的传输速率等
+- 2.数据链路层：在网络中由于各种干扰存在，物理链路是不可靠的，数据链路层通过各种控制协议，进行<font color="red">帧编码和误差纠正控制</font>将有差错的物理信道变为无差错的、能可靠传输数据帧的数据链路。
+- 3.网络层：网络中有很多台计算机，通过<font color="red">路由和寻址</font>，决定数据在网络中的游走路径。
+- 4.传输层：<font color="red">为两台主机进程之间的通信提供通用的数据传输服务，保证报文的正确传输</font>。
+- 5.会话层：<font color="red">建立、维护、重连应用程序之间的会话</font>
+- 6.表示层：负责<font color="red">数据格式的转换（解编码、加密解密、压缩解压缩等）</font>，将应用处理的信息转换为适合网络传输的格式，或者将来自下一层的数据转换为上层能处理的格式。
+- 7.应用层：直接<font color="red">向计算机用户提供服务。</font>
+
 #### 7、Java源代码了解吗？
 
 说hashmap  
@@ -136,14 +144,46 @@ mdate: 2023-03-27 11:17:11
 1.取 hash：先判断 key 是否为 null，如果为 null 直接令 hash=0,否则取得 key.hashcode，然后计算 hash=hashcode^(hashcode>>>16）
 2.算这个元素应该放到哪个数组下标：index=hash&(数组长度-1），实际上是做了 hash%数组长度的操作，但因为 hashmap 自动把数组长度变为 2 的幂次方，所以可以将耗时较长的取模操作转换为简单的位运算，结果都一样。
 3.如果定位到的数组位置没有元素就直接插入。如果定位到的数组位置有元素就和要插入的 key 比较，如果 key 相同就直接覆盖，如果 key 不相同，就判断该位置的那个节点是否是一个树节点，如果是就调用e = ((TreeNode<K,V>)p).putTreeVal(this, tab, hash, key, value)将元素添加进入。如果不是就遍历链表插入链表尾部，并且判断链表长度是否大于 8，大于 8 的时候再判断数组长度是否大于 64，如果大于 64 则进行链表转红黑树的操作，否则调用 resize 对数组进行扩容。
-4.最后 size++,如果大于threshold 的话就 resize 扩容。
+4.最后 size++<font color="red">（节点个数）</font>,如果大于threshold（数组长度*loadFactor） 的话就 resize 扩容。
 注意：扩容的时候是将数组扩容为原来的两倍，然后要遍历每个节点，利用每个节点的 hash &新数组长度-1 得到新的数组下标
+
 #### 9、MySQL用的索引结构
-b+树
+默认用b+树，另外还有hash索引、r树索引、全文索引等
+
+- hash索引：键值对的形式
+- r树索引：MyISAM引擎的特殊索引类型，主要用于地理空间类型
+- 全文索引：可以解决一些针对文本的模糊查询问题
+
+
+
 #### 10、解释B+树，以及他为什么能快速找到数据
 
-#### 11、怎么判断索引是无效的 
+mysql使用B+树做索引的原因：
+
+- 每个节点存的索引多，可以降低树的高度，减少磁盘IO
+- 所有数据都存在叶子节点，使得索引更为稳定。
+
+mysql的k阶B+树索引结构：
+
+- 有m个值的<font color="red">中间节点</font>有m个子节点，<font color="red">**ceil(k/2)≤m≤k**</font>
+- 根节点的<font color="red">**2≤m≤k**</font>
+
+- 叶子节点之间通过双向链表相连
+
+InnoDB引擎默认每个表都会建立<font color="red">聚簇索引（以主键为索引）</font>，叶子节点存放的是<font color="red">整行数据</font>
+
+非聚簇索引：<font color="red">非主键索引</font>，叶子节点存的是对应那行的<font color="red">主键</font>，所以要根据这个主键再去遍历聚簇索引（叫做<font color="red">“回表”</font>）
+
+MyISAM引擎的主键索引和非主键索引叶子节点存的都不是整行而是那一行的地址。
+
+
+
+#### 11、怎么判断索引是无效的
+
+使用explain 关键字+查询语句，可以显示出索引命中的情况
 
 #### 12、解释一下快排  时间复杂度
+
+
 
 #### 13、怎么算有向权重图最短路径，我答深度优先遍历  他问复杂度 我懵了  我当时觉得应该和图的节点数量有关吧  然后就没答出来  他就说看来复杂度你不太熟呀  害
