--- a/美团/3.30面试.md
+++ b/美团/3.30面试.md
@@ -53,7 +53,7 @@ HAVING post_num>10;
 
 - **硬盘、U盘等存储器**都归入外存储器，它们的访问速度是最慢的。
 
-#### java中怎么用：
+#### java中怎么用
 
 栈和堆位于RAM中，在执行一些计算的时候会用到寄存器，在读取文件、保存文件的时候会用到硬盘，例如通过BufferedReader从标准输入中读取字符串。
 
