--- a/蚂蚁/4.5 蚂蚁一面.md
+++ b/蚂蚁/4.5 蚂蚁一面.md
@@ -8,7 +8,43 @@
 
 ### 缓存穿透、缓存击穿、缓存雪崩及其应对策略
 
+#### 缓存穿透
 
+大量请求的key是不合理的，<font color="red">根本不存在于缓存中也不存在于数据库中</font>，(例如黑客伪造的假key）导致请求直接到了数据库，没有经过缓存这一层，对数据库造成了巨大压力。
+
+解决方法：
+
+- 缓存无效key：如果缓存和数据库中都查不到某个key那么就将这个key存到redis缓存中并设置一个较短的过期时间。缺点：会导致redis中存着大量的无效key
+- 布隆过滤器：在缓存之前加一个布隆过滤器，把所有有效的key存在该布隆过滤器中，有请求过来时通过过滤器判断是否是有效key，如果无效的话直接返回错误。缺点：布隆过滤器<font color="red">**可能会将没有的元素判为有，但反过来不会**</font>（原因是布隆过滤器由一个位数组+若干个hash函数组成，当加入一个key时会通过这些hash函数计算出若干个hash值然后将位数组的对应位置为1，当判断一个key在不在布隆过滤器中时也会进行同样的hash计算，然后根据位数组对应的位是否全为1来判断那个key在不在里面，这时候不同的key可能会计算出同样的hash值，所以会存在误判）
+
+#### 缓存击穿
+
+当大量请求某一个key（**热点数据**），但该key<font color="red">存在于数据库中但不存在于缓存中（可能是因为过期了）</font>，导致大量瞬时请求直接打在数据库上。
+
+解决方法：
+
+- 设置热点数据永不过期或者过期时间比较长。
+
+- 针对热点数据提前预热，将其存入缓存中并设置合理的过期时间比如秒杀场景下的数据在秒杀结束之前不过期。
+
+- 请求数据库写数据到缓存之前，先获取互斥锁，保证只有一个请求会落到数据库上，减少数据库的压力。
+
+#### 缓存雪崩
+
+缓存<font color="red">在同一时间大面积的失效</font>，导致大量的请求都直接落到了数据库上，对数据库造成了巨大的压力
+
+<font color="red">缓存服务宕机</font>也会导致缓存雪崩
+
+解决办法：
+
+- 针对缓存服务宕机的情况：
+  - 采用redis集群，避免因为单机出现问题导致整个缓存服务不可用
+  - 限流，避免同时处理大量请求
+
+- 针对热点缓存失效的情况：
+  - 设置不同的失效时间比如随机设置缓存的失效时间。
+  - 缓存永不失效（不太推荐，实用性太差）。
+  - 设置二级缓存。
 
 ### 公平锁和非公平锁
 
