--- a/美团/3.24美团一面.md
+++ b/美团/3.24美团一面.md
@@ -45,11 +45,9 @@ Spring的bean默认都是单例的
 
 缺点：
 
-某些情况下，单例是并发不安全的，以Controller举例，问题>根源在于，我们可能会在Controller中定义成员变量，如此一来，多个请求来临，进入的都是同一个单例的Controller对象，并对此成员变量的值进行修改操作，因此会互相影响，无法达到并发安全（不同于线程隔离的概念，后面会解释到）的效果。
+某些情况下，单例是并发不安全的，以Controller举例，问题根源在于，我们可能会在Controller中定义成员变量，如此一来，多个请求来临，进入的都是同一个单例的Controller对象，并对此成员变量的值进行修改操作，因此会互相影响，无法达到并发安全的效果。
 
  
-
-实话说这种问题不像八股，这种是你没用过就不会答的，所以我没答出来。
 
 PS：我觉得美团不同面试官出的问题都挺五花八门的。但普遍来说一开始都是问项目或实习，而且会问挺久。
 
