--- a/蚂蚁/4.5 蚂蚁一面.md
+++ b/蚂蚁/4.5 蚂蚁一面.md
@@ -4,7 +4,7 @@
 
 ### 非关系型数据库和关系型数据库的区别
 
-
+![image-20230412130758193](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20230412130758193.png)
 
 ### 缓存穿透、缓存击穿、缓存雪崩及其应对策略
 
@@ -96,11 +96,9 @@
 
 ### 用什么方式创建新线程
 
+方法1：实现Runnable接口，重写run方法，实例化该类的一个对象a后作为参数构建一个Thread对象：Thread thread=new Thread(a)，然后thread.start()
 
-
-
-
-
+方法2：继承Thread类，重新run方法，然后直接实例化该类的一个对象a，调用a.start()
 
 
 
